# Q-n-A-rest-api

./: README.md  docker-compose.yml
.github/workflows/: linters.yml
src/: db.sqlite3  pyproject.toml  pytest.ini  setup.cfg
src/core/: apps.py  asgi.py  settings.py  urls.py
src/core/migrations/: 0001_initial.py  0002_auto_20210614_2052.py  0003_auto_20210616_1350.py  0004_ticket_is_archived.py
src/core/models/: __init__.py
src/core/models/authentication/: __init__.py  token.py  user.py
src/core/models/ticket/: __init__.py  hash_tags.py  tickets.py
src/core/serializers/: __init__.py
src/core/serializers/authentication/: __init__.py  confirm_email.py  forgot.py  reset_password.py  sign_in.py  sign_up.py  user.py  user_with_token.py
src/core/serializers/hash_tags/: __init__.py  create.py  retrieve.py
src/core/serializers/tickets/: __init__.py  close.py  create.py  retrieve.py
src/core/serializers/validators/: __init__.py  user_not_exist.py
src/core/services/: __init__.py
src/core/services/email/: __init__.py  send_email.py
src/core/tasks/: email.py
src/core/views/: __init__.py  authentication.py  hash_tag.py  ticket.py
src/rest_api/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/templates/email/: base.html
