[tool.poetry]
name = "Q&AServiceRestAPI"
version = "0.1.0"
description = ""
authors = ["Булат Хазиев <khazievbulatphanzilovich@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
extra_standard_library = "django,rest_framework"
known_third_party = "celery,redis,drf_yasg"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
